comment about removig the dsecritption of images as 3D matricies

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -503,10 +503,7 @@ To help avoid confusion, in our revised version we refer to $v$ samples as ``inp
 12. Section V. ``We represent an image in the form of a 3D array'' - Does it mean the RGB representation?}
 \begin{itemize}
     \item It means, $C \times W \times H$, $C$ - colour channel (would be 1 for grey scale), $W$ - width of the image, $H$ - height of the image.
-    \item We clarify this, making the following changes:
-    \begin{quote}
-        We represent an image in the form of a $3$D array (colour channels $\times$ width $\times$ height);
-    \end{quote}
+    \item Due to limited space, we have removed this comment since it does not add significatly to the understanding of the paper.
 \end{itemize}
 
 {\color{blue}
@@ -738,7 +735,7 @@ We have addressed this in our revised version.
 
 \section{Additional Changes}
 
-We added a 
+The addition of Figure 2, which compares how the iDAAE and DAAE match encodings to the prior when trained on the CelebA dataset.
 
 
 \end{document}
