checked with original paper

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -242,7 +242,14 @@ These sentences remain as-is in the current paper, as we believe them to be corr
 {\color{blue}
 It is better to include some instances in Line 4-9, Column 2, Page2.}\\
 
-\hl{Have we addressed this?}\\
+In the revised version we have included the following references:
+{\color{red}
+\begin{quote}
+
+In some situations the encoding distribution is chosen rather than learned \{bengio2013generalized\}, in other situations the encoder and decoder are learned simultaneously \{kingma2013auto, makhzani2015adversarial, im2017denoising\}.
+\end{quote}
+
+}
 
 {\color{blue}
 I have no idea why the word “simple” in Line 19, Column 1, Page 3 is bold.}\newline
@@ -737,7 +744,7 @@ Fixed.
 
 {\color{blue} 10. Page 13, left column, row 23. Should it be ``testing dataset''?}\\
 
-No; this was correct, \hl{as used in the context of the Omniglot dataset.}\\
+No; this was correct, as used in the context of the Omniglot dataset.\\
 
 
 \end{document}
