--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -9,7 +9,7 @@
 \usepackage[utf8]{inputenc}
 
 \title{TNNLS DAAE Addressing Reviews}
-\author{ac2211 }
+\author{Antonia Creswell \& Anil Bharath}
 \date{October 2017}
 
 \usepackage{color,soul}
