remove bit about attaching last ref

--- a/responsetoreviewers.tex
+++ b/responsetoreviewers.tex
@@ -19,7 +19,7 @@
 
 \maketitle
 \section*{Introduction}
-We would like to thank the reviewers for the clear efforts put into reading, understanding and providing a critique of this draft. We apologise for the missing final page of references, which was an error that crept in on uploading the manuscript.  The {\em original} final page is attached as an appendix to this document, as well as the revised manuscript. \\
+We would like to thank the reviewers for the clear efforts put into reading, understanding and providing a critique of this draft. We apologise for the missing final page of references, which was an error that crept in on uploading the manuscript.  The revised manuscript can be found at the end of this document. \\
 
 In this response, we have included direct quotations from the three initial reviewers in {\color{blue}blue}; quotations from our original submission are written in {\em italic}, and quotations from other peer reviewed or widely cited/accepted work are in {\color{green}green}, and quotations that are taken from the revised paper are in {\color{red}red}.
 
